@@ -50,6 +50,7 @@ BUG FIXES AND IMPROVEMENTS
       of empty ranges.
     * Fix corner cases of breakTranscriptsOnGenes() and combineTranscripts()
       failing when no break or join errors are detected.
+    * Fix polymeraseWave processing genes beyond chromosome boundaries.
     * Fix makeConsensusAnnotations not correctly validating presence of gene_id
       column.
     * One can now control makeConsensusAnnotations() multi-core parallelism.
